# yugo-cloud-storage

./: .env  Cargo.toml  LICENSE  README.md  build.rs  docker-compose.yaml
migrations/: 20240724195123_init.sql  20240724204603_folder.sql
src/: bucket.rs  database.rs  errors.rs  main.rs
src/services/: user.rs
src/utils/: password.rs
