[package]
name = "yugo-cloud-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
rust-s3 = "0.34.0"


[dependencies.rocket]
version = "0.5.1"
default-features = true
features = ["json"]

[dependencies.sqlx]
version = "0.8.0"
default-features = false
features = ["macros", "migrate", "chrono", "postgres", "runtime-tokio"]
